[gd_scene load_steps=2 format=3 uid="uid://hj50wl7cgoen"]

[ext_resource type="Script" path="res://src/scripts/debug_player_script.gd" id="1_kw2go"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_kw2go")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 1281.0
offset_bottom = 721.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]

[node name="PositionText" type="RichTextLabel" parent="."]
offset_left = 13.0
offset_top = 11.0
offset_right = 582.0
offset_bottom = 34.0
text = "Position"
fit_content = true
scroll_active = false

[node name="VelocityText" type="RichTextLabel" parent="."]
offset_left = 13.0
offset_top = 39.0
offset_right = 582.0
offset_bottom = 62.0
text = "Velocity"
fit_content = true
scroll_active = false

[node name="StatusText" type="RichTextLabel" parent="."]
offset_left = 13.0
offset_top = 67.0
offset_right = 582.0
offset_bottom = 90.0
text = "Status"
fit_content = true
scroll_active = false
